fixed index alignment

--- a/style.css
+++ b/style.css
@@ -55,21 +55,29 @@
   
 main {
   flex: 1;
-  font-size: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
 
+.welcome {
+  font-size: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: absolute;
 }
 
 div {
   padding: 0 0.5em;
 }
 
-.players {
+.playersmain {
   flex: 1;
-  width: 100;
+  display: flex;
+  width: 100%;
   padding: 0.25em;
 }
 
@@ -132,3 +140,10 @@ footer {
   align-items: center;
 }
   
+.picture-box {
+  height: calc(250px + 1em);
+  margin-bottom: 1em;
+  padding: 0.5em;
+  background: rgb(86, 89, 93);
+  border-radius: 5px;
+}
